--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name="AA_DB_VERSION"
             android:value="1" />
 
+        <!-- Login -->
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
@@ -49,10 +50,13 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
+
+        <!-- Timeline -->
         <activity
             android:name=".activities.TimelineActivity"
-            android:label="@string/title_activity_timeline" >
+            android:label="@string/title_activity_timeline">
         </activity>
+
     </application>
 
 </manifest>
