Updated actionbar on main TimeLine activity to show "compose" button that opens a second compose activity.
The compose activity currently doesn't do anything, but has its
own action bar set up with the Twitter color, logo, back button, and
"send" button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,16 @@
         <!-- Timeline -->
         <activity
             android:name=".activities.TimelineActivity"
-            android:label="@string/title_activity_timeline">
+            android:label="@string/title_activity_timeline" >
         </activity>
-
+        <activity
+            android:name=".activities.ComposeActivity"
+            android:label="@string/title_activity_compose"
+            android:parentActivityName=".activities.TimelineActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.codepath.apps.simpletwitterclient.activities.TimelineActivity" />
+        </activity>
     </application>
 
 </manifest>
