--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".networking.TwitterApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_twitter_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
